[metadata]
name = softbgp
summary = A Python BGP Implementation
license = Apache License 2.0
author = OpenBGP project team
author-email = penxiao@cisco.com
home-page = http://ctrlbgp.github.io/
description-file = README.rst
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python
    Operating System :: Unix
keywords =
    BGP
    SDN

[global]
setup-hooks =
    softbgp.hooks.setup_hook

[files]
packages =
    softbgp
data_files =
    etc/softbgp =
        etc/softbgp/softbgp.ini.sample
[entry_points]
console_scripts =
    softbgpd = softbgp.agent.cmd:main