[metadata]
name = yabgp
summary = A Python BGP Implementation
license = Apache License 2.0
author = SmartBGP project team
author-email = penxiao@cisco.com
home-page = http://smartbgp.github.io/
description-file = README.rst
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python
    Operating System :: Unix
keywords =
    BGP
    SDN

[global]
setup-hooks =
    yabgp.hooks.setup_hook

[files]
packages =
    yabgp
data_files =
    etc/yabgp =
        etc/yabgp/yabgp.ini.sample
[entry_points]
console_scripts =
    yabgpd = yabgp.agent.cmd:main