[metadata]
name = yabgp
summary = Yet Another Border Gateway Protocol Python Implementation
license = Apache License 2.0
author = SmartBGP project team
author-email = xiaoquwl@gmail.com
home-page = http://smartbgp.github.io/
description-file = README.rst
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Operating System :: Unix
keywords =
    BGP
    SDN

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[global]
setup-hooks =
    yabgp.hooks.setup_hook

[files]
packages =
    yabgp
data_files =
    etc/yabgp/ =
        etc/yabgp/yabgp.ini.sample
[entry_points]
console_scripts =
    yabgpd = yabgp.agent.cmd:main